force-app/main/default/objects/Event_Management__c/Event_Management__c.object-meta.xml
<CustomObject>
    <label>Event Management</label>
    <nameField>
        <label>Event Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>