force-app/main/default/objects/Event_Management__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>